<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:padding="@dimen/margin5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_foreground"
        android:gravity="center"
        android:text="@string/titleTextVal"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/titleTextSize" />

    <TextView
        android:id="@+id/sloganTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5dp"
        android:padding="@dimen/margin5dp"
        android:text="@string/sloganTextVal"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="@dimen/sloganTextVal" />

    <ImageView
        android:id="@+id/CoverImageView"
        android:layout_width="match_parent"
        android:layout_height="399dp"
        android:layout_margin="@dimen/margin5dp"
        android:contentDescription="@string/CoverImageContentDesc"
        android:padding="@dimen/margin5dp"
        app:srcCompat="@drawable/auto_rental" />

    <Button
        android:id="@+id/startButtonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin5dp"
        android:background="@drawable/button_background"
        android:text="@string/startButtonVal"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/buttonTextSize" />
</LinearLayout>