<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/editbox_background_normal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:drawableRight="@drawable/ic_baseline_emoji_emotions_24"
        android:drawablePadding="@dimen/margin5dp"
        android:padding="@dimen/margin5dp"
        android:text="@string/loginTextVal"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/mailIdEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/emailInputType"
        android:inputType="textEmailSubject"
        android:padding="@dimen/margin5dp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/passowordHint"
        android:inputType="textPassword"
        android:singleLine="false"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/loginButtonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:layout_marginRight="@dimen/margin5dp"
        android:layout_marginBottom="@dimen/margin5dp"
        android:background="@drawable/button_background"
        android:text="login"
        android:textAllCaps="false"
        android:textSize="@dimen/buttonTextSize" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/registerDirView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:text="@string/registerDirVal"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/registrationLinkView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/creationTextVal"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>