<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin5dp"
        android:paddingTop="@dimen/margin20dp"
        android:paddingBottom="@dimen/margin5dp"
        android:text="@string/registerTitleTextVal"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/sloganTextVal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/firstNameTextVal"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_marginRight="@dimen/margin5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/lastNameTextVal"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_marginRight="@dimen/margin5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/emailTextVal"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_marginRight="@dimen/margin5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirmEmailTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/confirmEmailTextVal"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextConfirmEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_marginRight="@dimen/margin5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" /></LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin5dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:layout_weight="1"
        android:text="@string/passwordTextVal"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:layout_marginRight="@dimen/margin5dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/confirmPasswordTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/confirmPasswordTextVal"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_marginRight="@dimen/margin5dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" /></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerButtonView"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:background="@drawable/button_background"
            android:text="@string/registerTextVal"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextSize" />

        <Button
            android:id="@+id/cancelButtonView"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/cancelTextVal"
            android:textAllCaps="false"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>

</LinearLayout>