<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiketypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/hybridBikeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin5dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hybrid_bike_small"
                app:riv_corner_radius="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hybridBikeFavouriteView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

                <TextView
                    android:id="@+id/hybridBikeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hybridBikeTextVal"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tillAugTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tillAugTextView"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\u0024 24"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/roadBikeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin5dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/road_bike_small"
                app:riv_corner_radius="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/roadBikeFavouriteView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

                <TextView
                    android:id="@+id/roadBikeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/roadBikeTextVal"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label1TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tillAugTextView"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\u0024 33"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/timeRailBikeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin5dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/time_trail_bike_small"
                app:riv_corner_radius="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/timeTrailBikeFavouriteView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

                <TextView
                    android:id="@+id/timeTrailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeTrailBiikeVal"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label3TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tillAugTextView"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\u0024 42"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>