<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrucktypesActivity">

    <LinearLayout
        android:id="@+id/semiTrailerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin5dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/semi_trailer_truck_small"
                app:riv_corner_radius="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/semiTrailerTruckFavouriteView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

                <TextView
                    android:id="@+id/semiTrailerTruckTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/semiTrailerTruckTextVal"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tillAugTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tillAugTextView"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\u0024 200"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/flatBedTruckLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin5dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/flat_bed_truck_small"
                app:riv_corner_radius="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/flatBedTruckFavouriteView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

                <TextView
                    android:id="@+id/flatBedTruckTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/flatBedTruckTextVal"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label1TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tillAugTextView"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\u0024 170"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:id="@+id/straightTruckLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin5dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/straight_truck_small"
                app:riv_corner_radius="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/straightTruckFavouriteView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_baseline_favorite_border_24" />

                <TextView
                    android:id="@+id/straightTruckTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strightTruckTextVal"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label3TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tillAugTextView"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\u0024 163"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>